--- a/app/src/main/res/layout/item_pedidos.xml
+++ b/app/src/main/res/layout/item_pedidos.xml
@@ -6,15 +6,14 @@
     android:layout_width="390dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="4dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="1dp"
     app:cardCornerRadius="18dp"
     app:cardElevation="2dp"
-    app:cardUseCompatPadding="true">
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/fondo_promo"
         android:paddingStart="14dp"
         android:paddingEnd="4dp"
@@ -47,7 +46,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.915"
+            app:layout_constraintHorizontal_bias="0.38"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.14" />
@@ -64,26 +63,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.664"
+            app:layout_constraintHorizontal_bias="0.3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.719" />
-
-        <TextView
-            android:id="@+id/txt_descripcion_promo"
-            android:layout_width="150dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
-            android:text="TextView"
-
-
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.96"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/QuantityContainer"
@@ -91,10 +74,10 @@
             android:layout_height="35dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.79"
+            app:layout_constraintHorizontal_bias="0.92"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.26999998">
+            app:layout_constraintVertical_bias="0.62">
 
             <ImageButton
                 android:id="@+id/botton_aumentar"
