--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -50,10 +50,31 @@
             </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btDetailAddToCart"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:background="@drawable/btn_borrar"
+            android:drawableStart="@drawable/borrar2"
+            android:drawablePadding="8dp"
+            android:gravity="center"
+            android:padding="8dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="Vaciar "
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.061"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.587" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="200dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,23 +95,22 @@
                     android:text="Total"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.89"
+                    app:layout_constraintHorizontal_bias="0.891"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.32999998" />
+                    app:layout_constraintVertical_bias="0.416" />
 
                 <TextView
                     android:id="@+id/textView12"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="124dp"
                     android:text="Descuento"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.128"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.87" />
+                    app:layout_constraintVertical_bias="0.42000002" />
 
                 <TextView
                     android:id="@+id/textView11"
@@ -128,7 +148,7 @@
                     app:layout_constraintHorizontal_bias="0.113"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.165" />
+                    app:layout_constraintVertical_bias="0.258" />
 
                 <TextView
                     android:id="@+id/txt_sub_total_carrito"
@@ -140,16 +160,16 @@
                     app:layout_constraintHorizontal_bias="0.926"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.164" />
+                    app:layout_constraintVertical_bias="0.258" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnCarrito"
-                    android:layout_width="250dp"
+                    android:layout_width="230dp"
                     android:layout_height="wrap_content"
 
 
                     android:background="@drawable/search_edittext_background"
-                    android:text="Añadir Contribuyente"
+                    android:text="Comprar"
                     android:textColor="@color/pinkColor"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
