--- a/app/src/main/res/layout/item_pedidos.xml
+++ b/app/src/main/res/layout/item_pedidos.xml
@@ -3,16 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
-    android:layout_width="390dp"
+    android:layout_width="370dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="4dp"
     app:cardCornerRadius="18dp"
     app:cardElevation="2dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="390dp"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:background="@drawable/fondo_promo"
         android:paddingStart="14dp"
@@ -80,7 +79,7 @@
             app:layout_constraintVertical_bias="0.62">
 
             <ImageButton
-                android:id="@+id/botton_aumentar"
+                android:id="@+id/botton_aumentar_pedido"
                 android:layout_width="32dp"
                 android:layout_height="35dp"
 
@@ -111,7 +110,7 @@
                 app:layout_constraintVertical_bias="0.033" />
 
             <ImageButton
-                android:id="@+id/botton_disminuir"
+                android:id="@+id/botton_disminuir_pedido"
                 android:layout_width="32dp"
                 android:layout_height="35dp"
 
