--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -3,32 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
-    android:layout_width="225dp"
-    android:layout_height="235dp"
-    android:layout_marginStart="4dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="8dp"
+    android:layout_width="190dp"
+    android:layout_height="210dp"
+    android:layout_marginTop="10dp"
+    app:cardCornerRadius="25dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="190dp"
+        android:layout_height="190dp"
         android:background="@color/white"
-        android:paddingStart="14dp"
-        android:paddingEnd="4dp"
-        android:paddingBottom="20dp"
+
 
         >
 
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imagen_promo"
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:layout_marginEnd="20dp"
-            android:scaleType="centerInside"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.888"
@@ -42,29 +36,28 @@
             android:id="@+id/ItemName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="6dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.69"
+            app:layout_constraintHorizontal_bias="0.63"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imagen_promo"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_bias="0.69"
             tools:text="Institucional" />
 
         <ImageButton
             android:id="@+id/botton_promo"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginStart="7dp"
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_button_plus"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.9"
