--- a/app/src/main/res/layout/custom_dialog_contribuyente.xml
+++ b/app/src/main/res/layout/custom_dialog_contribuyente.xml
@@ -2,11 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/ContriContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="400dp">
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="400dp"
         android:gravity="center"
         android:orientation="vertical"
@@ -17,8 +18,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
+            android:layout_width="120dp"
+            android:layout_height="170dp"
             app:srcCompat="@drawable/factura__1_" />
 
         <com.google.android.material.textfield.TextInputLayout
