--- a/app/src/main/res/layout/custom_dialog_contribuyente.xml
+++ b/app/src/main/res/layout/custom_dialog_contribuyente.xml
@@ -35,11 +35,11 @@
           >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/eMail"
+                android:id="@+id/txt_razonsocial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName|textEmailAddress"
+                android:inputType="textPersonName"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="normal" />
