--- a/app/src/main/res/layout/item_contribuyentes.xml
+++ b/app/src/main/res/layout/item_contribuyentes.xml
@@ -37,7 +37,7 @@
             app:layout_constraintVertical_bias="0.68">
 
             <ImageButton
-                android:id="@+id/botton_editar_fac"
+                android:id="@+id/botton_editar_contri"
                 android:layout_width="25dp"
                 android:layout_height="35dp"
                 android:layout_marginRight="2dp"
@@ -51,7 +51,7 @@
                 app:layout_constraintVertical_bias="0.863" />
 
             <ImageButton
-                android:id="@+id/botton_borrar_fac"
+                android:id="@+id/botton_borrar_contri"
                 android:layout_width="25dp"
                 android:layout_height="35dp"
                 android:src="@drawable/borrar"
@@ -66,7 +66,7 @@
 
 
         <TextView
-            android:id="@+id/nombre_fac"
+            android:id="@+id/nombre_contri"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -84,7 +84,7 @@
             app:layout_constraintVertical_bias="0.192" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txt_nro_contri"
             android:layout_width="210dp"
             android:layout_height="32dp"
             android:lines="2"
