--- a/app/src/main/res/layout/custom_dialog_contribuyente.xml
+++ b/app/src/main/res/layout/custom_dialog_contribuyente.xml
@@ -70,7 +70,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btn_2"
+            android:id="@+id/btn_guardar_contri"
             android:layout_width="230dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
