--- a/app/src/main/res/layout/fragment_somos.xml
+++ b/app/src/main/res/layout/fragment_somos.xml
@@ -15,8 +15,9 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:textSize="20sp"
             android:layout_marginTop="40dp"
             android:text="Somos una empresa dedicada a la fabricación y comercialización de productos de limpieza e higiene, brindamos al cliente satisfacción plena, ofreciendo productos de calidad, con un servicio eficiente y eficaz en el momento oportuno." />
 
