--- a/app/src/main/res/layout/menu_promo.xml
+++ b/app/src/main/res/layout/menu_promo.xml
@@ -46,7 +46,7 @@
 
             android:maxLines="2"
             android:text="Combo de Limpieza"
-            android:textColor="@color/black"
+            android:textColor="#009CD7"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
