--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
     <color name="colorAccent">#448AFF</color>
     <color name="textColorPrimary">#212121</color>
     <color name="textColorSecondary">#757575</color>
-    <color name="pinkColor">#FF018786</color>
+    <color name="pinkColor">#32BEA6</color>
 </resources>
