--- a/app/src/main/res/layout/fragment_descripcion.xml
+++ b/app/src/main/res/layout/fragment_descripcion.xml
@@ -36,7 +36,7 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="TextView"
-            android:textColor="@color/black"
+            android:textColor="@color/textColorPrimary2"
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -163,7 +163,7 @@
                     android:layout_width="150dp"
                     android:layout_height="50dp"
                     android:background="@drawable/add_to_cart_background"
-                    android:drawableStart="@drawable/ic_cart_outline_grey600_24dp"
+                    android:drawableStart="@drawable/carrito_de_compras__1_"
                     android:drawablePadding="8dp"
                     android:gravity="center"
                     android:padding="8dp"
@@ -179,6 +179,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="1.0" />
+
+                <TextView
+                    android:id="@+id/txt_descuento_descripcion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    app:layout_constraintBottom_toTopOf="@+id/txt_precio_productos"
+                    app:layout_constraintEnd_toStartOf="@+id/btDetailAddToCart"
+                    app:layout_constraintHorizontal_bias="0.34"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.81" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
