--- a/app/src/main/res/layout/item_pedidos.xml
+++ b/app/src/main/res/layout/item_pedidos.xml
@@ -38,17 +38,18 @@
             android:id="@+id/txt_nombre_pedido"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:maxLines="2"
             android:text="Combo de Limpieza"
-            android:textColor="@color/black"
+            android:textColor="@color/textColorPrimary2"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.38"
+            app:layout_constraintHorizontal_bias="0.4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.14" />
+            app:layout_constraintVertical_bias="0.26" />
 
         <TextView
             android:id="@+id/txt_precio_pedido"
@@ -57,7 +58,7 @@
 
             android:maxLines="1"
             android:text="$ 5.98"
-            android:textColor="@color/black"
+            android:textColor="#00b347"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -65,15 +66,15 @@
             app:layout_constraintHorizontal_bias="0.25"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.719" />
+            app:layout_constraintVertical_bias="0.84000003" />
 
         <TextView
             android:id="@+id/txt_descuento_pedido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:foreground="@drawable/txt_promo"
             android:maxLines="1"
             android:text="$ 5.98"
-            android:foreground="@drawable/txt_promo"
 
             android:textColor="@color/textColorSecondary"
             android:textSize="12sp"
@@ -83,7 +84,7 @@
             app:layout_constraintHorizontal_bias="0.575"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.393" />
+            app:layout_constraintVertical_bias="0.53" />
 
         <TextView
             android:id="@+id/txt_pedido_precio_inicial"
