--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="textColorPrimary">#212121</color>
     <color name="textColorSecondary">#757575</color>
     <color name="pinkColor">#32BEA6</color>
+    <color name="textColorPrimary2">#009CD7</color>
 </resources>
