--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -19,7 +19,7 @@
             android:gravity="center"
             android:text="Carrito"
             android:textSize="20sp"
-            android:elevation="20dp"
+            android:elevation="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
@@ -29,8 +29,10 @@
 
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="270dp"
+            android:layout_marginEnd="16dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +43,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/contenedorCarrito"
                 android:layout_width="match_parent"
-                android:layout_height="270dp"
+                android:layout_height="280dp"
 
                 android:orientation="horizontal"
                 android:visibility="visible"
@@ -54,10 +56,12 @@
             android:id="@+id/borrar_todo"
             android:layout_width="150dp"
             android:layout_height="50dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/btn_borrar"
             android:drawableStart="@drawable/borrar2"
             android:drawablePadding="8dp"
             android:gravity="center"
+            android:onClick="borrar_carrito"
             android:padding="8dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -65,13 +69,12 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:onClick="borrar_carrito"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.061"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.587" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
             android:layout_width="match_parent"
